--- a/css/style.css
+++ b/css/style.css
@@ -140,15 +140,25 @@ body{
 #head-what{
     text-align: center;
     color: #F18116;
-    font-size: 15.8px;
+    font-size: 15.9px;
     font-weight: 600;
+    margin-bottom: 2px;
 }
 #center-grow{
     text-align: center;
     color:rgb(52, 63, 82) ;
+    font-size: 40px;
+    font-weight: 590;
+    margin-top: 10px;
+    margin-bottom: 7px;
 }
 #para-tempus{
     text-align: center;
+    color: rgb(96, 105, 123);
+    font-weight: 500;
+    font-size: 17.1px;
+    margin-top: 10px;
+
 }
 
 
